--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/core": "^0.5.2",
+    "@chakra-ui/icons": "^2.0.19",
     "@emotion/core": "^10.0.27",
-    "@emotion/styled": "^10.0.27",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^10.3.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,7 +18,7 @@
     "connected-react-router": "^6.7.0",
     "emotion-theming": "^10.0.27",
     "history": "^4.10.1",
-    "react": "^16.12.0",
+    "react": "^18.2.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
@@ -22,8 +26,9 @@
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.62.1",
     "styled-components": "^5.0.1",
-    "typescript": "^3.7.5"
+    "typescript": "^5.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
