--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/node": "^12.12.27",
     "connected-react-router": "^6.7.0",
     "emotion-theming": "^10.0.27",
+    "express": "^4.18.2",
     "history": "^4.10.1",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -55,5 +57,17 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.0",
     "url-loader": "^3.0.0"
-  }
+  },
+  "description": "This Application is a boilerplate for Type Safe redux Applications. React + Redux + TypeScript Applications.",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pnina-miller/tickchak-test.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pnina-miller/tickchak-test/issues"
+  },
+  "homepage": "https://github.com/pnina-miller/tickchak-test#readme"
 }
