--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tickchak-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/pnina-miller/tickchak-test#readme",
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/react": "^11.11.0",
@@ -32,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -56,6 +59,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.0",
+    "gh-pages": "^5.0.0",
     "url-loader": "^3.0.0"
   },
   "description": "This Application is a boilerplate for Type Safe redux Applications. React + Redux + TypeScript Applications.",
@@ -68,6 +72,5 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/pnina-miller/tickchak-test/issues"
-  },
-  "homepage": "https://github.com/pnina-miller/tickchak-test#readme"
+  }
 }
