--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tickchak-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/pnina-miller/tickchak-test#readme",
+  "homepage": "https://pnina-miller.github.io/tickchak-test",
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/react": "^11.11.0",
@@ -59,7 +59,6 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.0",
-    "gh-pages": "^5.0.0",
     "url-loader": "^3.0.0"
   },
   "description": "This Application is a boilerplate for Type Safe redux Applications. React + Redux + TypeScript Applications.",
@@ -72,5 +71,6 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/pnina-miller/tickchak-test/issues"
-  }
+  },
+  "homepage": "https://github.com/pnina-miller/tickchak-test#readme"
 }
